# introcomp

./: .gitignore  A1 - notas 2025.csv  A1 - notas 2025.ods  A1_2024.md  INTRODUÇÃO À COMPUTAÇÃO-CdD.docx  Introdução a redes e internet.docx  LICENSE  O_cortico.txt  Oracao_do_desenvolvedor.md  README.md  Turmas_2025.xlsx  VMs turma 2025.odt  conta_ocorrencias.sh  isso ai  ocorrencias.txt  palavras_antigas.txt  perguntas_python.md  perguntas_python2.md  tutorial.sh  vocabulario.txt
Aulas/Semana 1/: Aula 1.md  Aula 2.md  Aula 3.md
Aulas/Semana 2/: Aula 1.md  Aula 2.md  Aula 3.md
Aulas/Semana 3/: Aula 1.md  Aula 2.md  Aula 3.md
Aulas/Semana 4/: Aula 1.md  Aula 2.md
Aulas/Semana 5/: Aula 1.md  Aula 2.md  Aula 3.md
conteúdo/: chave  chave.pub
conteúdo/Introdução à programação/Python/: Aula 1 - Tipos e Operadores.md  Aula 2 - Laços e Condicionais.md  Aula 3 - Funções Builtin.md  Aula 4 - Numpy e Scipy.md  Collections e Itertools.ipynb  Game of Life.ipynb  Game of Life.ipynb.orig  Lista2.md  Lista3.md  Lista5.md  Palindromes.ipynb  Projeto_1_rascunho.ipynb  curiosidades.md  elevador.py  elevador_report.ipynb  funções_geradoras.md  gui.py  lecsv.py  lecsvgen.py  lista 4.ipynb  modulo.py  mosq.ipynb  problemas_elevador.md  pyproject.toml  romanos.py  romanos_to_ar.py  test_romanos_to_ar.py
conteúdo/Introdução à programação/Python/pacmae/pac1/: __init__.py
conteúdo/Introdução à programação/Python/pacmae/pac1/sp1/: modulo.py
conteúdo/Introdução à programação/Python/pacmae/pac2/: __init__.py
conteúdo/Introdução à programação/Python/pacmae/pac2/sp1/: modulo.py
(+91 files in other folders)
