[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.3.0",
    "flet>=0.85.2",
    "geopandas>=1.1.0",
    "ipywidgets>=8.1.7",
    "mapclassify>=2.9.0",
    "matplotlib>=3.10.3",
    "mosqlient>=1.9.3",
    "notebook>=7.4.3",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "scipy>=1.15.3",
    "sympy>=1.14.0",
]
